--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
   <body>
     <div class="container">
       <div class="row">
-        <div id="table-container" class="col-sm-12"></div>
-        <div class="col-sm-12"></div>
+        <div id="table-container" class="col-sm-8"></div>
+        <div id="settings-container" class="col-sm-4">
+          <table id="settings-table" class="pure-table">
+            <thead>
+            <tr>
+              <th>Field</th>
+              <th>Enabled</th>
+            </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+         </div>
       </div>
     </div>
     <script src="dist/main.js"></script>
