Implement an ability to regenerate companies & users
Signed-off-by: Sasha Reznikov <lard.dev@gmail.com>

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             </thead>
             <tbody></tbody>
           </table>
+
+          <hr>
+
+          <input type="button" id="regenerate-companies" value="Regenerate companies & users" />
          </div>
       </div>
     </div>
